--- a/config
+++ b/config
@@ -1,34 +1,41 @@
-xwayland enable
-
-output * bg #000000 solid_color
-
-output HDMI-A-1 {
-	mode --custom 1920x1080@72Hz
-	pos 0 0
-}
-output eDP-1 {
-	pos 1920 0
-}
+font pango:Hack Nerd Font 10
 
 set $mod Mod4
-
-bindsym $mod+Return exec kitty 
-bindsym $mod+c kill
-bindsym $mod+f fullscreen
+set $term foot
+set $menu wmenu-run
 
 default_border none
 
+output HDMI-A-1 {
+  modeline 204.25  1920 2056 2256 2592  1080 1083 1088 1127 -hsync +vsync
+  position 0,0
+}
+output eDP-1 resolution 1920x1080 position 1920,0
+
+input type:keyboard {
+    repeat_delay 220
+    repeat_rate 32
+    xkb_layout us,ru
+    xkb_options grp:alt_shift_toggle
+} 
+
+input type:touchpad {
+    tap enabled
+}
+
+bindsym $mod+Return exec $term
+bindsym $mod+c kill
+bindsym $mod+r exec $menu
+
 bindsym $mod+Left focus left
-bindsym $mod+Right focus right
-bindsym $mod+Up focus up
 bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
 
 bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Right move right
-bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Down move down
-
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
 
 bindsym $mod+1 workspace number 1
 bindsym $mod+2 workspace number 2
@@ -45,7 +52,6 @@ bindsym $mod+Shift+1 move container to workspace number 1
 bindsym $mod+Shift+2 move container to workspace number 2
 bindsym $mod+Shift+3 move container to workspace number 3
 bindsym $mod+Shift+4 move container to workspace number 4
-
 bindsym $mod+Shift+5 move container to workspace number 5
 bindsym $mod+Shift+6 move container to workspace number 6
 bindsym $mod+Shift+7 move container to workspace number 7
@@ -53,39 +59,25 @@ bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
 
-bindsym $mod+k workspace next
-bindsym $mod+j workspace prev
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
-bindsym $mod+e layout toggle stacking tabbed split
+bindsym $mod+f fullscreen
 
-bindsym $mod+h splith
-bindsym $mod+v splitv
+bindsym $mod+Shift+space floating toggle
 
-bindsym $mod+r exec dmenu_run
+bindsym --locked XF86AudioMute exec wpctl set-mute \@DEFAULT_AUDIO_SINK@ toggle
+bindsym --locked XF86AudioLowerVolume exec wpctl set-volume \@DEFAULT_AUDIO_SINK@ 1%-
+bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume \@DEFAULT_AUDIO_SINK@ 1%+
+bindsym --locked XF86AudioMicMute exec wpctl set-mute \@DEFAULT_AUDIO_SOURCE@ toggle
 
-input type:keyboard {
-	xkb_layout "us, ru"
-	xkb_options "grp:alt_shift_toggle"
-	repeat_delay 220
-	repeat_rate 32
-}
+bindsym --locked XF86MonBrightnessDown exec brightnessctl set 1%-
+bindsym --locked XF86MonBrightnessUp exec brightnessctl set 1%+
 
-input type:pointer {
-	accel_profile flat
-}
-
-input type:touchpad {
-	tap enabled
-	accel_profile flat
-}
-
-bindsym XF86AudioRaiseVolume exec amixer -q sset Master 3%+
-bindsym XF86AudioLowerVolume exec amixer -q sset Master 3%-
-bindsym XF86AudioMute exec amixer -q sset Master toggle
-# bindsym XF86AudioMicMute exec amixer set Capture toggle
-# bindsym XF86MonBrightnessDown exec brightnessctl set 1%- -q
-# bindsym XF86MonBrightnessUp exec brightnessctl set 1%+ -q"
-# 
 bar {
-	status_command i3status --config ~/.config/i3status/config
+  position top
+
+  status_command while date +'%Y-%m-%d %H:%M'; do sleep 1; done
 }
+
+include /etc/sway/config.d/*
