--- a/config
+++ b/config
@@ -1,3 +1,6 @@
+exec --no-startup-id dbus-update-activation-environment --all
+exec --no-startup-id /usr/libexec/xdg-desktop-portal -r
+
 font pango:Hack Nerd Font 10
 
 set $mod Mod4
