--- a/config
+++ b/config
@@ -1,5 +1,6 @@
+exec gentoo-pipewire-launcher restart &
 exec --no-startup-id dbus-update-activation-environment --all
-exec --no-startup-id /usr/libexec/xdg-desktop-portal -r
+# exec --no-startup-id /usr/libexec/xdg-desktop-portal -r
 
 font pango:Hack Nerd Font 10
 
@@ -83,4 +84,4 @@ bar {
   status_command while date +'%Y-%m-%d %H:%M'; do sleep 1; done
 }
 
-include /etc/sway/config.d/*
+seat seat0 hide_cursor 2000
